# fileengine_http_proxy

./: .dockerignore  .env-default  .env.example  .gitignore  CMakeLists.txt  Containerfile  DEVELOPER.md  DEVELOPMENT_PLAN.md  Makefile  OAUTH_SETUP.md  README.md  fileengine-http-bridge.service  fileengine-http-bridge.spec  generate_grpc.sh  http-bridge.env  openapi.yaml
.github/workflows/: build-image.yml
debian/: changelog  control  copyright  fileengine-http-bridge.install  rules
design_documents/: REPLICATION_FAILOVER.md
include/: audit_publisher.h  client_ip.h  grpc_client_wrapper.h  http_client.h  http_server.h  jwt.h  ldap_authenticator.h  oauth_provider.h  oauth_state_store.h  oidc_verify.h  session_store.h  token_store.h  utils.h
proto/: fileservice.proto
src/: audit_publisher.cpp  grpc_client_wrapper.cpp  http_client.cpp  http_server.cpp  ldap_authenticator.cpp  main.cpp  oauth_provider.cpp  oidc_verify.cpp  session_store.cpp  utils.cpp
tests/: test_e2e.sh  test_e2e_2fa.sh  test_e2e_security.sh  test_e2e_tenant_boundary.sh  test_main.cpp  test_oauth.sh  test_oauth_live.sh  test_oidc_verify.cpp  test_security.cpp  test_utils.cpp
